// Generated schema file for 'com.starry.myne.epub.models.EpubBook'
// For reference only, not actually used to generate protobuf code

syntax = "proto2";

// serial name 'com.starry.myne.epub.models.EpubBook'
message EpubBook {
  required string fileName = 1;
  required string title = 2;
  required string author = 3;
  required string language = 4;
  optional Bitmap coverImage = 5;
  // WARNING: a default value decoded when value is missing
  repeated EpubChapter chapters = 6;
  // WARNING: a default value decoded when value is missing
  repeated EpubImage images = 7;
}

// serial name 'Bitmap?'
message Bitmap {
  required bytes bytes = 1;
}

// serial name 'com.starry.myne.epub.models.EpubChapter'
message EpubChapter {
  required string chapterId = 1;
  required string absPath = 2;
  required string title = 3;
  required string body = 4;
}

// serial name 'com.starry.myne.epub.models.EpubImage'
message EpubImage {
  required string absPath = 1;
  required bytes image = 2;
}